--- a/escom-bpm-web/src/main/webapp/view/processes/elements/exit-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/elements/exit-card.xhtml
@@ -21,7 +21,7 @@
                     </p:selectBooleanCheckbox>
                     
                     <p:separator/>
-                    <p:commandButton value="#{bundle.Save}" update="mainFRM:centerFRM"
+                    <p:commandButton value="#{bundle.Save}" update="mainFRM"
                                      action="#{exitCardBean.onCloseCard('save')}" style="float: right;">
                         <f:param name="isRequired" value="true"/>
                     </p:commandButton>
