--- a/escom-bpm-web/src/main/webapp/view/processes/elements/message-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/elements/message-card.xhtml
@@ -25,7 +25,7 @@
                     
                     
                     <p:separator/>
-                    <p:commandButton value="#{bundle.Save}" update="mainFRM:centerFRM"
+                    <p:commandButton value="#{bundle.Save}" update="mainFRM"
                                      actionListener="#{messageCardBean.onCloseCard('save')}" style="float: right;">
                         <f:param name="isRequired" value="true"/>
                     </p:commandButton>
