--- a/escom-bpm-web/src/main/webapp/view/processes/elements/procedure-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/elements/procedure-card.xhtml
@@ -17,7 +17,7 @@
             <p:tab title="#{bundle.Condition}"  >
                 <p:panelGrid columns="1" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces" >
                     
-                    <p:commandButton value="#{bundle.Save}" update="mainFRM:centerFRM"
+                    <p:commandButton value="#{bundle.Save}" update="mainFRM"
                                      actionListener="#{conditionCardBean.onCloseCard('save')}" style="float: right;">
                         <f:param name="isRequired" value="true"/>
                     </p:commandButton>
