--- a/escom-bpm-web/src/main/webapp/view/processes/elements/timer-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/elements/timer-card.xhtml
@@ -91,7 +91,7 @@
             </p:tab>
         </p:tabView>
         
-        <p:commandButton value="#{bundle.Save}" update="mainFRM:centerFRM"
+        <p:commandButton value="#{bundle.Save}" update="mainFRM"
                     actionListener="#{timerCardBean.onCloseCard('save')}" style="float: right;">
                 <f:param name="isRequired" value="true"/>
         </p:commandButton>
