--- a/escom-bpm-web/src/main/webapp/view/processes/monitor.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/monitor.xhtml
@@ -81,7 +81,7 @@
                 </h:panelGrid>
                 
                 <p:commandButton value="#{bundle.Find}" id="btnSearche" 
-                                 actionListener="#{monitorBean.onRefreshData()}" update="mainFRM:centerFRM">
+                                 actionListener="#{monitorBean.onRefreshData()}" update="mainFRM">
                     <f:param name="isRequired" value="true"/>
                 </p:commandButton>
             </p:panelGrid>
