--- a/escom-bpm-web/src/main/webapp/view/services/mail/message.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/services/mail/message.xhtml
@@ -17,7 +17,7 @@
         <p:commandButton value="#{bundle.Send}" id="btnSend"
                          icon="ui-icon-mail-closed"
                          actionListener="#{mailMessageBean.sendMail()}"
-                         update="mainFRM:centerFRM">
+                         update="mainFRM">
             <f:param name="isRequired" value="true"/>
         </p:commandButton>
     </ui:define>
