--- a/escom-bpm-web/src/main/webapp/view/services/notification/notification.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/services/notification/notification.xhtml
@@ -12,7 +12,7 @@
                         actionListener="#{notificationBean.onCheckServices()}"
                         onstart="PF('statusDialog').show()"
                         oncomplete="PF('statusDialog').hide();"
-                        update="mainFRM:centerFRM mainFRM:eastFRM">
+                        update="mainFRM mainFRM:eastFRM">
                 <f:param name="isRequired" value="true"/>
         </p:commandButton>
     </ui:define>
